src/test/deca/context/invalid/SansObjet/DeclVar-And-string-float-int.deca
// Description:
//    Declaration of a string variable using && operation between a float variable and int .
// 
// Results:
//     Contextual error
//     Line 14: (RULE 3.33) Illegal operand type.
// 
// Historique: 
//    cree le 11/01/2022 

{
    float x =  1.5; 
    int y = 2; 
    string z = 1.5 && 2; 
}
